criando migration e entity do usuário
