# src/routes/index.ts
@@ -1,12 +1,12 @@
 import { Router } from "express";
 import { categoriesRoutes } from "./categories.routes";
-import { specificationRoutes } from "./specification.routes";
+import { specificationsRoutes } from "./specifications.routes";
 
 const router = Router();
 
 
 router.use("/categories",categoriesRoutes);
 
-router.use("/specification",specificationRoutes);
+router.use("/specifications",specificationsRoutes);
 
 export { router };
