# src/routes/specifications.routes.ts
@@ -1,13 +1,13 @@
 import { Router } from "express";
 import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
-const specificationRoutes = Router();
+const specificationsRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
 
-specificationRoutes.post("/", (request, response)=>{
+specificationsRoutes.post("/", (request, response)=>{
     return createSpecificationController.handle(request,response)
 });
 
-export {specificationRoutes};
+export {specificationsRoutes};
 
